<?xml version="1.0"?>
<package format="2">
  <name>sensor_management_system</name>
  <version>0.0.1</version>
  <description>The sensor_management_system package</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rostest</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
